networking/whole-deployment-notworking.yaml
#################################################################################################
# forex service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: forex-service
  labels:
    app: forex-service
    service: forex-service
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: forex-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forex-service
  labels:
    app: forex-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forex-service
      version: v1
  template:
    metadata:
      labels:
        app: forex-service
        version: v1
    spec:
      serviceAccountName: spring-forex-service
      containers:
      - name: forex-service
        image: asia.gcr.io/firm-vertex-263711/spring-boot-microservice-forex-service:version_1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# currency service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  labels:
    app: currency-service
    service: currency-service
spec:
  ports:
  - port: 8100
    name: http
  selector:
    app: currency-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-service
  labels:
    app: currency-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-service
      version: v1
  template:
    metadata:
      labels:
        app: currency-service
        version: v1
    spec:
      serviceAccountName: spring-currency-service
      containers:
      - name: currency-service
        image: asia.gcr.io/firm-vertex-263711/spring-boot-microservice-currency-conversion:version_1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
