networking/microservices-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springmicroservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springmicroservice
spec:
  hosts:
  - "*"
  gateways:
  - springmicroservice-gateway
  http:
  - match:
    - uri:
        prefix: /currency-exchange/from
    route:
    - destination:
        host: forex-service
        port:
          number: 8001
---
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springmicroservicecurrency
spec:
  hosts:
  - "*"
  gateways:
  - springmicroservice-gateway
  http:
  - match:
    - uri:
        prefix: /currency-converter
    route:
    - destination:
        host: currency-service
        port:
          number: 8002
